--- a/styles.css
+++ b/styles.css
@@ -60,17 +60,21 @@ header {
 
 .header-content {
     background-color: var(--color-lavender);
-    padding: 30px;
+    padding: 40px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+    max-width: 900px;
+    margin: auto;
 }
 
 .header-content p {
     background-color: var(--color-pink);
-    padding: 10px;
+    padding: 15px;
     font-style: italic;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
+    max-width: 700px;
+    margin: auto;
 }
 
 .menu-button {
@@ -89,55 +93,6 @@ nav {
     display: none;
 } 
 
-/*-------------------- MEDIA QUERY (medium) --------------------------------*/
-@media (min-width: 620px) {
-    .services-container, .pricing-container {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 20px;
-    }
-}
-
-/* Header for Medium Breakpoint */
-@media (min-width: 620px) {
-    .menu-button {
-        top: 20px;
-        right: 20px;
-    }
-}
-
-/*-------------------- MEDIA QUERY (large) ------------------------------------*/
-@media (min-width: 950px) {
-    .top-nav {
-        display: block;
-        background-color: var(--color-yellow);
-        padding: 10px;
-        text-align: center;
-    }
-
-    .top-nav ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-    }
-
-    .top-nav ul li {
-        margin-right: 15px;
-    }
-
-    .top-nav ul li a {
-        text-decoration: none;
-        font-weight: bold;
-        color: var(--color-dark-gray);
-    }
-
-    .menu-button {
-        display: none;
-    }
-}
-
 /*-------------------- MEDIA QUERY (xl) ---------------------------------------*/
 @media (min-width: 1280px) {
     .services-container {
@@ -149,7 +104,38 @@ nav {
     }
 
     /* Header Styles for XL */
-    header {
-        padding-bottom: 20px;
+    .top-nav {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--color-yellow);
+        height: 50px;
+    }
+
+    .top-nav ul {
+        list-style: none;
+        display: flex;
+        padding: 0;
+        margin: 0;
+    }
+
+    .top-nav ul li {
+        margin: 0 15px;
+    }
+
+    .top-nav ul li a {
+        text-decoration: none;
+        font-weight: bold;
+        color: var(--color-dark-gray);
+    }
+
+    .header-content {
+        max-width: 50%;
+        padding: 50px;
+    }
+
+    .header-content p {
+        max-width: 50%;
+        padding: 15px;
     }
 }
