--- a/styles.css
+++ b/styles.css
@@ -60,20 +60,20 @@ header {
 
 .header-content {
     background-color: var(--color-lavender);
-    padding: 40px;
+    padding: 30px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    max-width: 900px;
+    max-width: 70%;
     margin: auto;
 }
 
 .header-content p {
     background-color: var(--color-pink);
-    padding: 15px;
+    padding: 10px;
     font-style: italic;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
-    max-width: 700px;
+    max-width: 60%;
     margin: auto;
 }
 
@@ -106,10 +106,11 @@ nav {
     /* Header Styles for XL */
     .top-nav {
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
         background-color: var(--color-yellow);
         height: 50px;
+        padding-right: 30px;
     }
 
     .top-nav ul {
@@ -130,12 +131,12 @@ nav {
     }
 
     .header-content {
-        max-width: 50%;
-        padding: 50px;
+        max-width: 40%;
+        padding: 40px;
     }
 
     .header-content p {
         max-width: 50%;
-        padding: 15px;
+        padding: 10px;
     }
 }
