--- a/styles.css
+++ b/styles.css
@@ -61,20 +61,19 @@ header {
 .header-content {
     background-color: var(--color-lavender);
     padding: 30px;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
+    border-radius: 15px;
     max-width: 70%;
     margin: auto;
 }
 
 .header-content p {
     background-color: var(--color-pink);
-    padding: 10px;
+    padding: 10px 15px;
     font-style: italic;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    max-width: 60%;
-    margin: auto;
+    border-radius: 15px;
+    display: block;
+    max-width: 80%;
+    margin: 10px auto 0;
 }
 
 .menu-button {
@@ -110,7 +109,7 @@ nav {
         align-items: center;
         background-color: var(--color-yellow);
         height: 50px;
-        padding-right: 30px;
+        padding: 0 30px;
     }
 
     .top-nav ul {
@@ -131,12 +130,15 @@ nav {
     }
 
     .header-content {
-        max-width: 40%;
+        max-width: 50%;
         padding: 40px;
+        border-radius: 20px;
     }
 
     .header-content p {
-        max-width: 50%;
-        padding: 10px;
+        display: block;
+        max-width: 80%;
+        padding: 10px 20px;
+        margin: 10px auto 0;
     }
 }
