--- a/styles.css
+++ b/styles.css
@@ -86,11 +86,26 @@ header {
     font-style: italic;
     border-radius: 5px;
     cursor: pointer;
+    display: block;
 }
 
 nav {
     display: none;
 } 
+
+/*-------------------- MEDIA QUERY (medium) --------------------------------*/
+@media (min-width: 620px) {
+    .menu-button {
+        display: block;
+    }
+}
+
+/*-------------------- MEDIA QUERY (large) ------------------------------------*/
+@media (min-width: 950px) {
+    .menu-button {
+        display: none;
+    }
+}
 
 /*-------------------- MEDIA QUERY (xl) ---------------------------------------*/
 @media (min-width: 1280px) {
@@ -105,11 +120,14 @@ nav {
     /* Header Styles for XL */
     .top-nav {
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
         align-items: center;
         background-color: var(--color-yellow);
         height: 50px;
-        padding: 0 30px;
+        padding: 0 20px;
+        max-width: 80%;
+        margin: 0 auto;
+        border-radius: 10px;
     }
 
     .top-nav ul {
